--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx ts-node-dev ./src/index.ts"
+  },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "dotenv": "^12.0.3",
     "fp-ts": "^2.11.7",
     "io-ts": "^2.2.16"
   },
