--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "cors": "^2.8.5",
     "dotenv": "^12.0.3",
     "fp-ts": "^2.11.7",
-    "io-ts": "^2.2.16"
+    "http-status-codes": "^2.2.0",
+    "io-ts": "^2.2.16",
+    "retry-ts": "^0.1.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
     "jest": "^27.4.7",
     "supertest": "^6.2.1",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
