--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "fp-ts": "^2.11.7",
     "http-status-codes": "^2.2.0",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
+    "monocle-ts": "^2.3.12",
+    "newtype-ts": "^0.3.5",
     "retry-ts": "^0.1.3"
   },
   "devDependencies": {
