--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^12.0.3",
     "fp-ts": "^2.11.7",
+    "fp-ts-rxjs": "^0.6.15",
     "http-status-codes": "^2.2.0",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "monocle-ts": "^2.3.12",
     "newtype-ts": "^0.3.5",
-    "retry-ts": "^0.1.3"
+    "retry-ts": "^0.1.3",
+    "rxjs": "6"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
