--- a/lambda-sentiment/template.yaml
+++ b/lambda-sentiment/template.yaml
@@ -35,6 +35,7 @@ Resources:
         Variables:
           # Make table name accessible as environment variable from function code during execution
           SENTIMENT_TABLE: !Ref SENTIMENT
+          GOOGLE_APPLICATION_CREDENTIALS: "/var/task/dist/handlers/google-nl-creds-api.json"
       Events:
         Api:
           Type: Api
