--- a/lambda-sentiment/samconfig.toml
+++ b/lambda-sentiment/samconfig.toml
@@ -8,3 +8,4 @@ s3_prefix = "football-sentiment"
 region = "us-west-2"
 capabilities = "CAPABILITY_IAM"
 image_repositories = []
+confirm_changeset = true
