--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "@aws-sdk/client-dynamodb": "^3.49.0",
     "@google-cloud/language": "^4.3.2",
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^12.0.3",
+    "express": "^4.17.3",
     "fp-ts": "^2.11.7",
     "fp-ts-rxjs": "^0.6.15",
     "http-status-codes": "^2.2.0",
