--- a/lambda-sentiment/package.json
+++ b/lambda-sentiment/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.53.0",
+    "@aws-sdk/lib-dynamodb": "^3.53.0",
     "@google-cloud/language": "^4.3.2",
     "aws-sdk": "^2.1077.0",
     "fp-ts": "^2.11.8",
