--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "rxjs": "6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "^17.0.10",
     "jest": "^27.4.7",
     "supertest": "^6.2.1",
