streamService and stream start api

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,24 @@ lambda-sentiment/.aws-sam/build/processTweetSentiment/dist/handlers/process-twee
 lambda-sentiment/dist/handlers/process-tweet-sentiment.js
 lambda-sentiment/.aws-sam/build/processTweetSentiment/dist/handlers/process-tweet-sentiment.js
 lambda-sentiment/dist/handlers/process-tweet-sentiment.js
+server/dist/*.js
+server/dist/decoders.js
+server/dist/decoders.js
+server/dist/index.js
+server/dist/stream.js
+server/dist/types.js
+server/dist/controller/rules.js
+server/dist/dynamodb/db.js
+server/dist/dynamodb/tableParams.js
+server/dist/Error/Error.js
+server/dist/middleware/errorHandler.js
+server/dist/middleware/validators.js
+server/dist/routes/api.js
+server/dist/stream/decodeJSONstream.js
+server/dist/stream/processStream.js
+server/dist/stream/reconnect.js
+server/dist/stream/StreamService.js
+server/dist/stream/tweetStreamTransforms.js
+server/dist/stream/twitterStreamAPI.js
+server/dist/utils/axiosUtils.js
+server/dist/utils/sendErrorResponse.js
