--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npx ts-node-dev ./src/index.ts"
+    "dev": "npx ts-node-dev ./src/index.ts",
+    "start": "node ./dist/index.js",
+    "clean": "rm -r ./dist",
+    "build": "npx tsc"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.49.0",
     "@google-cloud/language": "^4.3.2",
-    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
@@ -23,7 +25,8 @@
     "monocle-ts": "^2.3.12",
     "newtype-ts": "^0.3.5",
     "retry-ts": "^0.1.3",
-    "rxjs": "6"
+    "rxjs": "6",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
